--- a/gobotany/static/sass/_mapping.scss
+++ b/gobotany/static/sass/_mapping.scss
@@ -16,7 +16,7 @@
         margin-right: 10px;
     }
 }
-#mini-sightings-map .info-window {
+#sightings-locator .info-window {
     img {
         height: 75px;
         width: 80px;
