Hide the Checklist "Share" button until we implement it.

--- a/gobotany/plantshare/templates/checklists.html
+++ b/gobotany/plantshare/templates/checklists.html
@@ -52,7 +52,7 @@
         </tbody>
     </table><!-- /.checklists-list -->
     <div class="form-actions small-margin-top">
-        <a class="ps-button" href="javascript:alert('Coming soon!');" rel="shadowbox;height=440;width=750;" class="share-btn inactive btn">Share</a>
+        <!-- <a class="ps-button" href="javascript:alert('Coming soon!');" rel="shadowbox;height=440;width=750;" class="share-btn inactive btn">Share</a> -->
         <a class="ps-button" href="javascript:alert('Coming soon!');" class="export-btn inactive btn">Export</a>
         <a class="ps-button" href="javascript:alert('Coming soon!');" rel="shadowbox;width=600;height=180;" class="delete-btn inactive btn">Delete</a>
     </div><!-- /.form-actions -->
