Show blank profile lightbox from Find People results. (#441)

--- a/gobotany/plantshare/templates/_plantshare_navigation.html
+++ b/gobotany/plantshare/templates/_plantshare_navigation.html
@@ -17,7 +17,7 @@
                 <li>{% nav_item 'Checklists' ps-checklists %}</li>
                 <li>{% nav_item 'Find People' ps-find-people %}</li>
                 <li>{% nav_item 'Your Groups' %}{# TODO: add URL name #}</li>
-                <li class="profile">{% nav_item 'Your Profile' ps-profile %}</li>
+                <li class="profile">{% nav_item 'Your Profile' ps-your-profile %}</li>
                 <li class="logout">{% nav_item 'Log Out' auth_logout %}</li>
             {% else %}
                 {% comment %}
