Enable deleting of checklists from Checklist index view.

--- a/gobotany/plantshare/templates/checklists.html
+++ b/gobotany/plantshare/templates/checklists.html
@@ -4,7 +4,10 @@
 {% block title %}Checklists: Plantshare{% endblock %}
 
 {% block js_require %}
-    require(['util/suggester_init']);
+    require([
+        'util/suggester_init',
+        'plantshare/checklists'
+    ]);
 {% endblock %}
 
 {% block body_attributes %}id="checklists" class="plantshare checklists"{% endblock %}
@@ -24,37 +27,40 @@
 <div class="ps-section">
     <h2 class="left">Checklists</h2>
     {% if checklists %}
-    <table id="checklists-view" class="checklists-list">
-        <thead>
-            <tr>
-                <th class="first"></th>
-                <th class="checklistview-name">Name<span></span></th>
-                <th class="date">Date Found</th>
-                <th class="owner">Owner</th>
-                <th class="last"></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for checklist in checklists %}
-            <tr>
-                <td class="first"><input type="checkbox" /></td>
-                <td class="checklistview-name">{{ checklist.name }}</td>
-                <td class="date">{{ checklist.date_found|default:"N/A" }}</td>
-                {% ifequal user.username checklist.owner.name %}
-                <td class="owner">Me</td>
-                <td class="last"><a href="{% url 'ps-checklist-edit' checklist.pk %}">Edit List</a></td>
-                {% else %}
-                <td class="owner">{{ checklist.owner.name }}</td>
-                <td class="last"><a href="{% url 'ps-checklist' checklist.pk %}">View List</a></td>
-                {% endifequal %}
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table><!-- /.checklists-list -->
+    <form action="" method="POST">
+      {% csrf_token %}
+      <table id="checklists-view" class="checklists-list">
+          <thead>
+              <tr>
+                  <th class="first"></th>
+                  <th class="checklistview-name">Name<span></span></th>
+                  <th class="date">Date Found</th>
+                  <th class="owner">Owner</th>
+                  <th class="last"></th>
+              </tr>
+          </thead>
+          <tbody>
+              {% for checklist in checklists %}
+              <tr>
+                  <td class="first"><input type="checkbox" name="checklist_id" value="{{checklist.pk}}"/></td>
+                  <td class="checklistview-name">{{ checklist.name }}</td>
+                  <td class="date">{{ checklist.date_found|default:"N/A" }}</td>
+                  {% ifequal user.username checklist.owner.name %}
+                  <td class="owner">Me</td>
+                  <td class="last"><a href="{% url 'ps-checklist-edit' checklist.pk %}">Edit List</a></td>
+                  {% else %}
+                  <td class="owner">{{ checklist.owner.name }}</td>
+                  <td class="last"><a href="{% url 'ps-checklist' checklist.pk %}">View List</a></td>
+                  {% endifequal %}
+              </tr>
+              {% endfor %}
+          </tbody>
+      </table><!-- /.checklists-list -->
+    </form>
     <div class="form-actions small-margin-top">
         <!-- <a class="ps-button" href="javascript:alert('Coming soon!');" rel="shadowbox;height=440;width=750;" class="share-btn inactive btn">Share</a> -->
         <a class="ps-button" href="javascript:alert('Coming soon!');" class="export-btn inactive btn">Export</a>
-        <a class="ps-button" href="javascript:alert('Coming soon!');" rel="shadowbox;width=600;height=180;" class="delete-btn inactive btn">Delete</a>
+        <a href="{% url 'ps-checklist-delete' %}" class="ps-button delete-btn inactive btn">Delete</a>
     </div><!-- /.form-actions -->
     {% else %}
         <span>You currently have no checklists.</span>
