Hyperlink email addresses and URLs in permissions tooltips. (#468)

--- a/gobotany/site/templates/gobotany/_terms_main_content.html
+++ b/gobotany/site/templates/gobotany/_terms_main_content.html
@@ -286,7 +286,7 @@
             <p>If you submit an unusual observation or a sighting of a 
                 plant known to be listed as Endangered, Threatened, 
                 Special Concern, Historic or Invasive in a New England 
-                state, we may e-mail you to request more details and to 
+                state, we may email you to request more details and to 
                 confirm your sighting.  Your email address and contact 
                 information will not be sold or distributed outside New 
                 England Wild Flower Society.</p>
