Fix incorrect trailing colon in home page title element.

--- a/gobotany/site/templates/concord/home.html
+++ b/gobotany/site/templates/concord/home.html
@@ -1,6 +1,7 @@
 {% extends "concord/_base.html" %}
 
 {% block title %}Concord Flora: Go Botany{% endblock %}
+{% block title_sep %}{% endblock %}
 {% block title_suffix %}{% endblock %}
 
 {% block more_meta_link %}
