--- a/gobotany/site/templates/gobotany/_base.html
+++ b/gobotany/site/templates/gobotany/_base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{% block title %}{% endblock %}:
+        <title>{% block title %}{% endblock %}{% block title_sep %}:{% endblock %}
             {% block title_suffix %}Go Botany{% endblock %}</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,
