--- a/gobotany/site/templates/gobotany/home.html
+++ b/gobotany/site/templates/gobotany/home.html
@@ -1,6 +1,7 @@
 {% extends "gobotany/_base.html" %}
 
 {% block title %}Go Botany: New England Wild Flower Society{% endblock %}
+{% block title_sep %}{% endblock %}
 {% block title_suffix %}{% endblock %}
 
 {% block more_meta_link %}
