--- a/gobotany/site/templates/partner/home.html
+++ b/gobotany/site/templates/partner/home.html
@@ -1,6 +1,7 @@
 {% extends "partner/_base.html" %}
 
 {% block title %}Partner Site Sample: Go Botany{% endblock %}
+{% block title_sep %}{% endblock %}
 {% block title_suffix %}{% endblock %}
 
 {% block more_meta_link %}
