--- a/gobotany/site/templates/gobotany/_page_no_sidebar.html
+++ b/gobotany/site/templates/gobotany/_page_no_sidebar.html
@@ -2,6 +2,7 @@
 
 {% block body_content %}
 <div class="content">
+    {% block top_content %}{% endblock %}
     <div class="container no-sidebar">
         <div id="main" class> 
             {% block main_content %}{% endblock %}
