--- a/gobotany/static/sass/_taxa.scss
+++ b/gobotany/static/sass/_taxa.scss
@@ -179,7 +179,8 @@ body.taxa {
             p {
                 margin: 0 0 15px;
             }
-        }
+        } /* end #main */
+
         #sb-player {
             &.html {
                 background: #fff;
@@ -194,16 +195,17 @@ body.taxa {
             }
         }
         .note {
-            background: #c4bd93;
+            background: rgba(196, 189, 147, 0.7);
             border-bottom: 1px solid #ad9f50;
             border-top: 1px solid #ad9f50;
             color: #000;
             font-family: $headings-font;
-            font-size: 24px;
-            margin-bottom: 0.5em;
-            padding: 0.5em 0;
+            font-size: 22px;
+            padding: 8px 0;
+            position: relative;
             text-align: center;
             width: 100%;
+            z-index: 11;
         }
         a.description-control {
             background: url(/static/images/icons/plus.png) left 50% no-repeat;
@@ -423,6 +425,7 @@ $mini-table-font-size: 10px;
                 border: 1px solid $border-green;
                 padding-left: 16px;
                 padding-right: 16px;
+                z-index: 10;
             }
 
             #species-images {
