Adjust species list page column widths.

--- a/gobotany/site/templates/gobotany/_species_list_main_content.html
+++ b/gobotany/site/templates/gobotany/_species_list_main_content.html
@@ -9,7 +9,7 @@
             <th class="common">Common Name</th>
             <th class="family">Family</th>
             <th class="dist">New England Distribution</th>
-            <th class="native">North American Native</th>
+            <th class="native">N. American Native</th>
             <th class="wetland">Wetland Code</th>
             <th class="group">Group</th>
             <th class="subgroup">Subgroup</th>
